samples/_failures_safe/1761494556_cda303_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c95a3a8.c: In function ‘main’:
./samples/SAFE/__tmp_8c95a3a8.c:164:5: error: expected expression at end of input
  164 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_8c95a3a8.c:164:5: error: expected declaration or statement at end of input
